<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ruchnoy_fon"
    android:orientation="vertical"
    tools:context=".admin.MainActivity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-96dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/session_text"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:textAlignment="center"
                android:textSize="14sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/text_proverka"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/scan"
                android:layout_width="300dp"
                android:layout_height="88dp"
                android:background="@drawable/button_style"
                android:shadowColor="#A80000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="8"
                android:text="@string/b1_1"
                android:textColor="#ffffff"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="InOrMmUsage" />

            <Button
                android:id="@+id/b1_2"
                android:layout_width="300dp"
                android:layout_height="88dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/button_style"
                android:shadowColor="#A80000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="8"
                android:text="@string/b1_2"
                android:textColor="#ffffff"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="InOrMmUsage" />

            <Button
                android:id="@+id/b1_3"
                android:layout_width="300dp"
                android:layout_height="88dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/button_style"
                android:shadowColor="#A80000"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="8"
                android:text="@string/b1_3"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="InOrMmUsage" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>